trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -23,11 +23,11 @@ body {
   min-width: 150px;
   align-self: stretch;
 }
-.polaroids > div {
-  /*margin: 10px;*/
+/*.polaroids > div {
+  margin: 10px;
   flex: 1;
-  /*min-width: 150px;*/
-}
+  min-width: 150px;
+}*/
 .polaroids div {
   -webkit-transform: rotate(-2deg);
   -moz-transform: rotate(-2deg);
